# kuavo-ros-opensource

./: .gitignore  CHANGELOG.md  CLAUDE.md  readme.md
docker/: run_with_gpu.sh
docs/: sidebars.js  运动控制API.md
docs/1产品介绍/: KUAVO_4PRO MaxA版产品介绍.md  KUAVO_4PRO MaxB版产品介绍.md  KUAVO_4PRO 展厅版产品介绍.md  KUAVO_4PRO 展厅算力版产品介绍.md  KUAVO_4PRO 标准版产品介绍.md  KUAVO_4PRO 进阶版产品介绍.md  KUAVO_4PRO产品介绍.md  KUAVO_4_1产品介绍.md  产品介绍.md
docs/3调试教程/: 快速调试.md  机器人关节标定.md
docs/4开发接口/: SDK介绍.md  仿真环境使用.md  接口使用文档.md
docs/4开发接口/kuavo-humanoid-sdk接口/: kuavo-humanoid-sdk介绍.md  机器人信息获取接口.md  机器人移动以及步态接口.md
docs/4开发接口/kuavo-humanoid-websocket-sdk接口/: Websockts通信.md  kuavo-humanoid-websocket-sdk介绍.md  头部以及手部控制接口.md  机器人信息获取接口.md  机器人移动以及步态接口.md  音频播放接口.md
docs/5功能案例/: 案例目录.md
docs/5功能案例/拓展案例/: 手腕相机抓取放置案例.md  机器人开源导航案例.md
docs/5功能案例/拓展案例/模仿学习使用案例/: 数据转换.md  数据采集.md  模型训练.md  模型部署.md
docs/5功能案例/综合案例/: 机器人开源导航案例.md  策略模块搬箱子案例.md
docs/5功能案例/通用案例/: H12遥控器使用开发案例.md  VR使用开发案例.md  yolov8目标检测案例.md  二维码抓取水瓶案例.md  全身打太极动作案例.md  基于人脸识别的简易语音交互案例.md  大模型联网搜索与视觉推理案例.md  强化学习案例gym版.md  强化学习案例lab版.md  接入deepseek大模型语音交互案例.md  接入豆包实时语音大模型案例.md  数据采集案例.md  策略模块搬箱子案例.md  键盘控制案例.md
docs/6常用工具/: Kuavo机器人启动脚本使用指南.md  Kuavo机器人桌面软件使用手册.md
docs/7常见问题与故障排查/: 故障排查.md
installed/include/dexhand_sdk/: dexhand_base.h  modbus.h  protobuf_dexhand.h  touch_dexhand.h
installed/include/hardware_plant/: hardware_plant.h  lejuclaw_controller.h  revo2_hand_controller.h  ruiwo_actuator_base.h
installed/include/humanoid_interface/: HumanoidInterface.h
installed/include/humanoid_interface/common/: ModelSettings.h
installed/include/humanoid_interface/foot_planner/: SwingTrajectoryPlanner.h
installed/include/humanoid_interface/gait/: GaitSchedule.h
installed/include/humanoid_interface/reference_manager/: SwitchedModelReferenceManager.h
installed/include/leju_claw_driver/: lejuclaw.h
installed/include/ruiwo_controller/: ruiwo_actuator.h
installed/include/ruiwo_controller_cxx/include/: ruiwo_actuator.h
installed/lib/cmake/hardware_plant/: hardware_plantConfig.cmake  hardware_plantTargets.cmake
installed/tests/: hardware_plant_test.cpp
scripts/: health_check.sh  install_openvino.sh  kuavo_watchdog.sh  leju_start.sh  smart_launch.sh
scripts/joint_cali/: head_cali.py
src/data_challenge_simulator/: CMakeLists.txt
src/data_challenge_simulator/examples/: automation.py  bag_check.py  data_collect.py  helperfunc.py  launch.py  rename.py  task1.py  task2.py  task3.py  task4.py
src/data_challenge_simulator/examples/deploy/: deploy.py  deploy_fixed.py  deploy_smart.py  eval1.py  eval2.py  eval3.py  eval4.py  task1.py
src/data_challenge_simulator/launch/: joy_control_sim.launch  load_kuavo_mujoco_sim1.launch  load_kuavo_mujoco_sim2.launch  load_kuavo_mujoco_sim3.launch  load_kuavo_mujoco_sim4.launch
src/data_challenge_simulator/utils/: conveyor_controller.py  evaluator.py  gripper_controller.py  object_pos.py  pose_controller.py  topic_repeater.py  trajectory_controller.py  utils.py  xml_random.py
src/demo/arm_capture_apriltag/: arm_capture_apriltag.py  claw_capture_apriltag.py
src/demo/csv2body_demo/: step_player_csv_ocs2.py
src/demo/grab_box/src/: grab_box_demo.cpp
src/demo/taiji/: read.md
src/gazebo/ar_control/launch/: robot_strategies.launch
src/gazebo/gazebo-sim/launch/: gazebo-sim.launch  load_slope_roban.launch
src/gazebo/gazebo-sim/src/: gazebo_shm_interface.cpp
src/gazebo/gazebo-sim/worlds/: leju_vln.world
src/humanoid-control/h12pro_controller_node/config/: customize_config.json
src/humanoid-control/h12pro_controller_node/robot_state/: ocs2_before_callback.py  rl_before_callback.py  robot_state.json
src/humanoid-control/h12pro_controller_node/scripts/: deploy_autostart.sh
src/humanoid-control/humanoid_controllers/: package.xml
src/humanoid-control/humanoid_controllers/config/: log_topics.yaml
src/humanoid-control/humanoid_controllers/launch/: load_kuavo_gazebo_manipulate.launch  load_kuavo_gazebo_sim.launch  load_kuavo_isaac_sim.launch  load_kuavo_mujoco_sim.launch  load_kuavo_real.launch
src/humanoid-control/humanoid_controllers/scripts/: auto_gait_controller.py  singleStepSlope-roban.py  stairClimbPlanner-vision-continuous.py  stairClimbPlanner-vision.py  stairClimbPlanner.py
src/humanoid-control/humanoid_controllers/src/: humanoidController.cpp
src/humanoid-control/humanoid_interface_ros/rviz/: humanoid.rviz
src/humanoid-control/humanoid_interface_ros/scripts/: simStepControl6DWorld.py
src/kuavo_arm_collision_check/: CMakeLists.txt  package.xml  readme.md
src/kuavo_arm_collision_check/launch/: arm_collision_check.launch
src/kuavo_arm_collision_check/src/: arm_collision_checker.cpp
src/kuavo_assets/config/kuavo_v100045/: kuavo.json
src/kuavo_assets/scripts/: update_mass.sh
src/kuavo_common/: CMakeLists.txt
src/kuavo_humanoid_sdk/: install.sh
src/kuavo_led/: Readme.md
src/kuavo_msgs/: CMakeLists.txt  format_msgs.py
src/manipulation_nodes/motion_capture_ik/: CMakeLists.txt
src/manipulation_nodes/pico-body-tracking-server/: README.md
src/manipulation_nodes/planarmwebsocketservice/: README.md
src/mujoco/src/: mujoco_node.cc
third_party_libs/ec-tools/: CMakeLists.txt
third_party_libs/ec-tools/Sharelib/Common/: EcLogging.cpp
third_party_libs/ec-tools/Sharelib/EcMasterDemo/: EcDemoApp.cpp  EcDemoApp.h
third_party_libs/ec-tools/Sharelib/Linux/: EcDemoMain.cpp
third_party_libs/ec-tools/Sharelib/User/: EcLogFile.cpp  EcLogFile.h  EcMotor.cpp  EcMotor.h  EcSdo.cpp  EcSdo.h  ObjectDiction.h  UserAppWorkpd.cpp  UserAppWorkpd.h  leg_breakin.cpp  util.cpp  util.h
tools/: setup-kuavo-ros-control.sh
tools/check_tool/: Hardware_tool.py  fix_ros_key.sh
tools/check_tool/leju_claw_driver/: lejuclaw_test
tools/check_tool/roban2_joint_breakin/: README.md  roban2_joint_breakin.py
tools/check_tool/roban2_joint_breakin/roban2_leg_breakin/: CMakeLists.txt  EcMasterConfig.py  README.md  roban2_leg_breakin.py
tools/check_tool/roban2_joint_breakin/roban2_leg_breakin/config/ENI_config/: yd300_13_c500.xml
tools/factory_test/: factory_test.sh  readme.md
(+153 files in other folders)
